Fix and document amortized loan model

--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f90f2f",
+   "id": "067b9e83",
    "metadata": {},
    "source": [
     "### Annuity Loans (Swe., annuitetslån) - Matching-Times Model"
@@ -198,9 +198,9 @@
    "id": "69f9a48b",
    "metadata": {},
    "source": [
-    "#### Example 1\n",
+    "#### Example 1A\n",
     "\n",
-    "Consider an economy with an income tax rate of 30%. A borrower with an annual bruto income of 500,000 SEK intends to borrow 2,000,000 SEK at an annaul interest rate of 1.5% and is willing to allocate 50% of her income to service the loan. She anticipates a change in the annual interest rate to 4.8% in 1.5 years. Meanwhile, her annual salary has increased by 2%. She seeks to determine the equivalent principal $p_2$ for the previous loan under the new circumstances."
+    "Consider an economy with an income tax rate of 30%. A borrower with an annual bruto income of 500,000 SEK intends to take an **annuity loan** for 2,000,000 SEK at an annaul interest rate of 1.5% and is willing to allocate 50% of her income to service the loan. She anticipates a change in the annual interest rate to 5% in 1.5 years. Meanwhile, her annual salary has increased by 2%. She seeks to determine the equivalent principal $p_2$ for the previous loan under the new circumstances."
    ]
   },
   {
@@ -215,7 +215,7 @@
     "* `r1 = 0.015`\n",
     "* `s1 = 500_000`\n",
     "* `delta = 0.50`\n",
-    "* `r2 = 0.048`\n",
+    "* `r2 = 0.05`\n",
     "* `gamma = 0.02`\n",
     "* `s2 = 500_000 * (1 + gamma)`"
    ]
@@ -229,7 +229,7 @@
    "source": [
     "gamma, tau, delta = 0.02, 0.30, 0.50\n",
     "p1, r1, s1 = 2_000_000, 0.015, 500_000\n",
-    "r2, s2 = 0.0480, 500_000 * (1 + gamma)"
+    "r2, s2 = 0.050, 500_000 * (1 + gamma)"
    ]
   },
   {
@@ -280,13 +280,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equivalent principal: 1,679,778.51 SEK\n"
+      "Equivalent principal: 1,660,891.75 SEK\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "from src.fair_price_model import annuity_matching_T\n",
     "\n",
     "p2 = annuity_matching_T(p1, s1, r1, r2, tau, delta, gamma)\n",
@@ -303,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equivalent principal: -16.01% SEK\n"
+      "Equivalent principal: -16.96% SEK\n"
      ]
     }
    ],
@@ -313,7 +311,221 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30c7798c",
+   "id": "d98c40cc",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a74a2cbe",
+   "metadata": {},
+   "source": [
+    "### Amortized Loans (Swe., rak amortering) - Matching-Times Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91387d07",
+   "metadata": {},
+   "source": [
+    "Unlike annuity loans, where the monthly payments remain fixed until the loan is fully repaid, amortized loans and interest charge on the remaining principal. The nominal value of the amortization remains constant, while the interest gradually decreases until the loan is completely paid off. Amortized loans are a widely preferred financial product for mortgages in Sweden. This makes the fair price model using amortized loans more suitable for modeling the Swedish housing market."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44be0c99",
+   "metadata": {},
+   "source": [
+    "Fair price model for amortized loans is derived in similar way as for annuity loans. The total cost for borrowing is defined as\n",
+    "\n",
+    "$$\\Sigma = \\sum_{t = 0}^{T_p} \\left[ A + (p - A t) r \\right], \\qquad (6) $$\n",
+    "\n",
+    "where the first term in the sum is the amortization (i.e., repayment of the principal), the second term is the interest payment and $T_p$ is the natural number of months needed to pay off the loan."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c60947",
+   "metadata": {},
+   "source": [
+    "Expanding (6) gives\n",
+    "\n",
+    "$$\\Sigma = A \\sum_{t=0}^{T_p} 1 + p\\,r \\sum_{t=0}^{T_p} 1 - A\\,r \\sum_{t=0}^{T_p} t, $$\n",
+    "\n",
+    "using $p = A \\, T_p$ together with the simple sum rule for the first two terms and the [arithmetic progression](https://en.wikipedia.org/wiki/Arithmetic_progression#Sum) for the last term gives\n",
+    "\n",
+    "$$ \\Sigma = p + r \\, T_p \\, p - r \\,  T_p \\, A \\frac{T_p - 1}{2}. \\qquad (7) $$\n",
+    "\n",
+    "Note that the interest rate for the last term in the arithmetic progression (when $t = T_p$) is zero and therefore the arithmetic progression goes up to $T_p - 1$ and has $T_p$ terms in the sum, including $t = 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49d74095",
+   "metadata": {},
+   "source": [
+    "The total cost of borrowing can be rewritten in terms of the time required to repay the total cost of borrowing \n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\hat T &= \\frac{\\sigma}{A} \\\\\n",
+    "&= T_p + r \\, {T_p}^2 - r \\, T_p \\frac{T_p - 1}{2},\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "and can be finally simpliefied to\n",
+    "\n",
+    "$$ \\hat T = T_p + r \\, T_p \\frac{1 + T_p}{2}. \\qquad (8)$$\n",
+    "\n",
+    "The total time required to repay the loan is the sum of time required to repay the principal and interest. Interestingly, the time required to repay the interest, the second term in (8), is a quadratic function of time required to repay the principal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe1fecde",
+   "metadata": {},
+   "source": [
+    "To find a fair price model, we equate the time required to repay the total cost of borrowing, under different interest rate environments\n",
+    "\n",
+    "$$\\hat T_1 = \\hat T_2, \\qquad (9) $$\n",
+    "\n",
+    "where the indices 1 and 2 represent the lower rate regime and the higher rate regime, respectively. Substituting (8) into (9) and simplifying gives \n",
+    "\n",
+    "$$ \\frac{r_2}{2} {{T_p}_2}^2 + \\left( 1 + \\frac{r_2}{2} \\right) {T_p}_2 - {T_p}_1 \\left( 1 + \\frac{r_1}{2} (1 + {T_p}_1) \\right) = 0, \\qquad (10) $$\n",
+    "\n",
+    "where all terms are known except for ${T_p}_2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7333d80",
+   "metadata": {},
+   "source": [
+    "Finally, after solving the quadratic equation and finding the true solution for ${T_p}_2$ we find\n",
+    "\n",
+    "$$ p_2 = A_2 {T_p}_2, $$\n",
+    "\n",
+    "which represents the equivalent principal in the regime with new rates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "035f26e6",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7099ab49",
+   "metadata": {},
+   "source": [
+    "#### Example 1B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a7ca3a",
+   "metadata": {},
+   "source": [
+    "Considering the problem description given in **Example 1A** and find the equivalent principal $p_2$ for an **amortized loan**. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "483d0433",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma, tau, delta = 0.02, 0.30, 0.50\n",
+    "p1, r1, s1 = 2_000_000, 0.015, 500_000\n",
+    "r2, s2 = 0.050, 500_000 * (1 + gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a64c8d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monthly payment at t1: 14,600.00 SEK\n"
+     ]
+    }
+   ],
+   "source": [
+    "A1 = s1 * (1 - tau) * delta / 12\n",
+    "print(f\"Monthly payment at t1: {round(A1, -2):,.2f} SEK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2dd58a48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monthly payment at t2: 14,900.00 SEK\n"
+     ]
+    }
+   ],
+   "source": [
+    "A2 = s1 * (1 + gamma) * (1 - tau) * delta / 12\n",
+    "print(f\"Monthly payment at t2: {round(A2, -2):,.2f} SEK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9c735899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equivalent principal: 1,772,444.98 SEK\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.fair_price_model import amortized_matching_T\n",
+    "\n",
+    "p2 = amortized_matching_T(p1, s1, r1, r2, tau, delta, gamma)\n",
+    "print(f\"Equivalent principal: {p2:,.2f} SEK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b4004bc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equivalent principal: -11.38% SEK\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Equivalent principal: {(p2 - p1)/p1:.2%} SEK\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4417747d",
    "metadata": {},
    "source": [
     "---"
@@ -332,12 +544,12 @@
    "id": "46221bd7",
    "metadata": {},
    "source": [
-    "For the parameters given in **Example 1** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *ANNUITY LOAN* sizes $\\rho = p_1/s_1 \\in [2, 4.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.3, 1]$."
+    "For the parameters given in **Example 1A** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *ANNUITY LOAN* sizes $\\rho = p_1/s_1 \\in [2, 5.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.25, 1]$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "40e7e37e",
    "metadata": {},
    "outputs": [],
@@ -348,15 +560,15 @@
     "from src.plotting import plot_annuity_matching_T\n",
     "\n",
     "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
-    "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
-    "r2, s2 = 0.0480, 500_000 * (1 + gamma)\n",
+    "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 5.5, 0.05)\n",
+    "r2, s2 = 0.050, 500_000 * (1 + gamma)\n",
     "\n",
     "plot_annuity_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d5a8cb7",
+   "id": "d354ca98",
    "metadata": {},
    "source": [
     "#### Example 2B"
@@ -364,16 +576,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36368f5d",
+   "id": "6e786c61",
    "metadata": {},
    "source": [
-    "For the parameters given in **Example 1** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *AMORTIZED LOAN* sizes $\\rho = p_1/s_1 \\in [2, 4.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.3, 1]$."
+    "For the parameters given in **Example 1A** calculate the relative change of equivalent principal $p_2$ compared to $p_1$ for a range of borrowers with different *AMORTIZED LOAN* sizes $\\rho = p_1/s_1 \\in [2, 5.5]$ and fractions allocated to repaying the debt $\\delta \\in [0.25, 1]$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98a0419d",
+   "execution_count": 13,
+   "id": "06f2bc0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,9 +594,9 @@
     "\n",
     "from src.plotting import plot_amortized_matching_T\n",
     "\n",
-    "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
-    "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 4.5, 0.05)\n",
-    "r2, s2 = 0.0480, 500_000 * (1 + gamma)\n",
+    "gamma, tau, deltas = 0.02, 0.30, np.arange(0.25, 1.01, 0.01)\n",
+    "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 5.5, 0.05)\n",
+    "r2, s2 = 0.050, 500_000 * (1 + gamma)\n",
     "\n",
     "plot_amortized_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
    ]
