--- a/presentation_annuity_loans.ipynb
+++ b/presentation_annuity_loans.ipynb
@@ -54,9 +54,12 @@
    "source": [
     "After the first month Jim owes the interest on the initial principal $P_1 r$ and makes a payment $A$ which covers the interest and, the leftover, reduces the outstanding principal. The outstanding principal $P_2$ is than\n",
     "    \n",
-    "$$ P_2 = P_1 - (A - P_1 r)$$\n",
-    "\n",
-    "$$ \\; \\; \\; = P_1(1+r) - A .$$"
+    "$$\n",
+    "\\begin{align}\n",
+    "P_2 &= P_1 - (A - P_1 r)\\\\\n",
+    "&= P_1(1+r) - A. \n",
+    "\\end{align}\n",
+    "$$\n"
    ]
   },
   {
@@ -65,11 +68,13 @@
    "source": [
     "After the second month Jim owns the interest $P_2 r$ on the outstanding principal $P_2$ and makes another payment $A$. This further reduces his outstanding principal to\n",
     "\n",
-    "$$P_3 = P_2 - (A - P_2r)$$\n",
-    "\n",
-    "$$ \\; \\; \\; = P_2(1+r) - A $$ \n",
-    "\n",
-    "$$ \\qquad \\qquad \\qquad  = \\left(P_1 (1+r) - A\\right)(1+r) - A.$$"
+    "$$\n",
+    "\\begin{align}\n",
+    "P_3 &= P_2 - (A - P_2r) \\\\\n",
+    "&= P_2(1+r) - A \\\\\n",
+    "& = \\left(P_1 (1+r) - A\\right)(1+r) - A.\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -78,11 +83,13 @@
    "source": [
     "Finally, after the third month Jim makes the last payment $A$ and pays off the interest on the remaining principal and settles the loan\n",
     "\n",
-    "$$P_4 = P_3 - (A - P_3r)$$\n",
-    "\n",
-    "$$ \\; \\; \\; = P_3(1+r) - A $$ \n",
-    "\n",
-    "$$ \\qquad \\qquad \\qquad \\qquad \\qquad \\quad \\! = (\\left(P_1 (1+r) - A\\right)(1+r) - A)(1+r)-A.$$"
+    "$$\n",
+    "\\begin{align}\n",
+    "P_4 &= P_3 - (A - P_3r) \\\\\n",
+    "&= P_3(1+r) - A \\\\\n",
+    "&= (\\left(P_1 (1+r) - A\\right)(1+r) - A)(1+r)-A.\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
