--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "Fair price model for amortized loans is derived in similar way as for annuity loans. The total cost for borrowing is defined as\n",
     "\n",
-    "$$\\Sigma = \\sum_{t = 0}^{T_p} \\left[ A + (p - A t) r \\right], \\qquad (6) $$\n",
+    "$$\\Sigma = \\sum_{t = 0}^{T_p} \\left[ A + (p - A \\, t) \\, r \\right], \\qquad (6) $$\n",
     "\n",
     "where the first term in the sum is the amortization (i.e., repayment of the principal), the second term is the interest payment and $T_p$ is the natural number of months needed to pay off the loan."
    ]
@@ -370,8 +370,8 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\hat T &= \\frac{\\sigma}{A} \\\\\n",
-    "&= T_p + r \\, {T_p}^2 - r \\, T_p \\frac{T_p - 1}{2},\n",
+    "\\hat T &= \\frac{\\sigma}{A} \\notag \\\\\n",
+    "&= T_p + r \\, {T_p}^2 - r \\, T_p \\frac{T_p - 1}{2}, \\notag\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
