--- a/presentation_annuity_loans.ipynb
+++ b/presentation_annuity_loans.ipynb
@@ -31,12 +31,12 @@
    "source": [
     "Payment schedule:\n",
     "\n",
-    "|  Month  | Principal | Interest    |  Amortization | Outstanding principal |\n",
-    "|---------|-----------|-------------|---------------|-----------------------|\n",
-    "|    1    | $P_1$     | $P_1r$      |    A          | $P_2 = P_1(1+r)-A$    |\n",
-    "|    2    | $P_2$     | $P_2r$      |    A          | $P_3 = P_2(1+r)-A$    |\n",
-    "|    3    | $P_3$     | $P_3r$      |    A          | $P_4 = P_3(1+r)-A$    |\n",
-    "|    4    | $P_4 = 0$ |    -        |    -          | -                     |\n",
+    "|  Month  | Principal | Interest    |  Amortization |  Outstanding principal |\n",
+    "|---------|-----------|-------------|---------------|------------------------|\n",
+    "|    1    | $P_1$     | $P_1 \\, r$  |    A          | $P_2 = P_1 \\, (1+r)-A$ |\n",
+    "|    2    | $P_2$     | $P_2 \\, r$  |    A          | $P_3 = P_2 \\, (1+r)-A$ |\n",
+    "|    3    | $P_3$     | $P_3 \\, r$  |    A          | $P_4 = P_3 \\, (1+r)-A$ |\n",
+    "|    4    | $P_4 = 0$ |    -        |    -          | -                      |\n",
     "\n",
     "where $P_1 \\gt P_2 \\gt P_3 \\gt P_4$."
    ]
@@ -56,8 +56,8 @@
     "    \n",
     "$$\n",
     "\\begin{align}\n",
-    "P_2 &= P_1 - (A - P_1 r)\\\\\n",
-    "&= P_1(1+r) - A. \n",
+    "P_2 &= P_1 - (A - P_1 \\, r) \\notag \\\\\n",
+    "&= P_1 \\, (1+r) - A. \\notag\n",
     "\\end{align}\n",
     "$$\n"
    ]
@@ -70,9 +70,9 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "P_3 &= P_2 - (A - P_2r) \\\\\n",
-    "&= P_2(1+r) - A \\\\\n",
-    "& = \\left(P_1 (1+r) - A\\right)(1+r) - A.\n",
+    "P_3 &= P_2 - (A - P_2 \\, r) \\notag \\\\\n",
+    "&= P_2 \\, (1+r) - A \\notag \\\\\n",
+    "& = \\left(P_1 \\, (1+r) - A\\right)(1+r) - A. \\notag\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -85,9 +85,9 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "P_4 &= P_3 - (A - P_3r) \\\\\n",
-    "&= P_3(1+r) - A \\\\\n",
-    "&= (\\left(P_1 (1+r) - A\\right)(1+r) - A)(1+r)-A.\n",
+    "P_4 &= P_3 - (A - P_3 \\, r) \\notag \\\\\n",
+    "&= P_3 \\, (1+r) - A \\notag \\\\\n",
+    "&= (\\left(P_1 \\, (1+r) - A\\right)(1+r) - A)(1+r)-A. \\notag\n",
     "\\end{align}\n",
     "$$"
    ]
