--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -330,7 +330,7 @@
    "id": "91387d07",
    "metadata": {},
    "source": [
-    "Unlike annuity loans, where the monthly payments remain fixed until the loan is fully repaid, amortized loans and interest charge on the remaining principal. The nominal value of the amortization remains constant, while the interest gradually decreases until the loan is completely paid off. Amortized loans are a widely preferred financial product for mortgages in Sweden. This makes the fair price model using amortized loans more suitable for modeling the Swedish housing market."
+    "Unlike annuity loans, where the monthly payments remain fixed until the loan is fully repaid, amortized loans and interest charge on the remaining principal. The nominal value of the amortization remains constant, while the interest gradually decreases until the loan is completely paid off. Amortized loans are a widely preferred financial product for mortgages in Sweden. This makes the fair-price model using amortized loans more suitable for modeling the Swedish housing market."
    ]
   },
   {
@@ -338,11 +338,15 @@
    "id": "44be0c99",
    "metadata": {},
    "source": [
-    "Fair price model for amortized loans is derived in similar way as for annuity loans. The total cost for borrowing is defined as\n",
+    "Fair-price model for amortized loans is derived in similar way as for annuity loans. The total cost for borrowing is defined as\n",
     "\n",
-    "$$\\Sigma = \\sum_{t = 0}^{T_p} \\left[ A + (p - A \\, t) \\, r \\right], \\qquad (6) $$\n",
+    "$$\\Sigma = \\sum_{t = 1}^{T_p} A + \\left[ p - A \\, (t - 1) \\right] \\, r , \\qquad (6) $$\n",
     "\n",
-    "where the first term in the sum is the amortization (i.e., repayment of the principal), the second term is the interest payment and $T_p$ is the natural number of months needed to pay off the loan."
+    "where the first term in the sum is the amortization (i.e., repayment of the principal), the second term is the sum of interest payment and $T_p$ is the natural number of months needed to pay off the loan \n",
+    "\n",
+    "$$T_p = \\frac{p}{A}.$$\n",
+    "\n",
+    "Note that the interest rate for the first payment is payed on the whole principal amount and thus the compensation in the second term. "
    ]
   },
   {
@@ -350,15 +354,13 @@
    "id": "99c60947",
    "metadata": {},
    "source": [
-    "Expanding (6) gives\n",
+    "Expanding (6) and switching the counter in the second term for the interest rate payemnts gives\n",
     "\n",
-    "$$\\Sigma = A \\sum_{t=0}^{T_p} 1 + p\\,r \\sum_{t=0}^{T_p} 1 - A\\,r \\sum_{t=0}^{T_p} t, $$\n",
+    "$$\\Sigma = A \\sum_{t=1}^{T_p} 1 + p\\,r \\sum_{t=1}^{T_p} 1 - A\\,r \\sum_{t=0}^{T_p - 1} t, $$\n",
     "\n",
     "using $p = A \\, T_p$ together with the simple sum rule for the first two terms and the [arithmetic progression](https://en.wikipedia.org/wiki/Arithmetic_progression#Sum) for the last term gives\n",
     "\n",
-    "$$ \\Sigma = p + r \\, T_p \\, p - r \\,  T_p \\, A \\frac{T_p - 1}{2}. \\qquad (7) $$\n",
-    "\n",
-    "Note that the interest rate for the last term in the arithmetic progression (when $t = T_p$) is zero and therefore the arithmetic progression goes up to $T_p - 1$ and has $T_p$ terms in the sum, including $t = 0$."
+    "$$ \\Sigma = p + r \\, T_p \\, p - r \\,  T_p \\, A \\frac{T_p - 1}{2}. \\qquad (7) $$"
    ]
   },
   {
@@ -366,11 +368,11 @@
    "id": "49d74095",
    "metadata": {},
    "source": [
-    "The total cost of borrowing can be rewritten in terms of the time required to repay the total cost of borrowing \n",
+    "The total cost of borrowing can be rewritten in terms of the time required to repay the total cost of borrowing given the amortization in (5)\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\hat T &= \\frac{\\sigma}{A} \\notag \\\\\n",
+    "\\hat T &= \\frac{\\Sigma}{A} \\notag \\\\\n",
     "&= T_p + r \\, {T_p}^2 - r \\, T_p \\frac{T_p - 1}{2}, \\notag\n",
     "\\end{align}\n",
     "$$\n",
@@ -387,7 +389,7 @@
    "id": "fe1fecde",
    "metadata": {},
    "source": [
-    "To find a fair price model, we equate the time required to repay the total cost of borrowing, under different interest rate environments\n",
+    "To find a fair-price model, we equate the time required to repay the total cost of borrowing, under different interest rate environments\n",
     "\n",
     "$$\\hat T_1 = \\hat T_2, \\qquad (9) $$\n",
     "\n",
