Add variability for taxes

--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -228,6 +228,7 @@
    "outputs": [],
    "source": [
     "gamma, tau, delta = 0.02, 0.30, 0.50\n",
+    "tau1, tau2 = tau, tau\n",
     "p1, r1, s1 = 2_000_000, 0.015, 500_000\n",
     "r2, s2 = 0.050, 500_000 * (1 + gamma)"
    ]
@@ -287,7 +288,7 @@
    "source": [
     "from src.fair_price_model import annuity_matching_T\n",
     "\n",
-    "p2 = annuity_matching_T(p1, s1, r1, r2, tau, delta, gamma)\n",
+    "p2 = annuity_matching_T(p1, s1, r1, r2, tau1, tau2, delta, gamma)\n",
     "print(f\"Equivalent principal: {p2:,.2f} SEK\")"
    ]
   },
@@ -444,6 +445,7 @@
    "outputs": [],
    "source": [
     "gamma, tau, delta = 0.02, 0.30, 0.50\n",
+    "tau1, tau2 = tau, tau\n",
     "p1, r1, s1 = 2_000_000, 0.015, 500_000\n",
     "r2, s2 = 0.050, 500_000 * (1 + gamma)"
    ]
@@ -503,7 +505,7 @@
    "source": [
     "from src.fair_price_model import amortized_matching_T\n",
     "\n",
-    "p2 = amortized_matching_T(p1, s1, r1, r2, tau, delta, gamma)\n",
+    "p2 = amortized_matching_T(p1, s1, r1, r2, tau1, tau2, delta, gamma)\n",
     "print(f\"Equivalent principal: {p2:,.2f} SEK\")"
    ]
   },
@@ -562,10 +564,11 @@
     "from src.plotting import plot_annuity_matching_T\n",
     "\n",
     "gamma, tau, deltas = 0.02, 0.30, np.arange(0.3, 1.01, 0.01)\n",
+    "tau1, tau2 = tau, tau\n",
     "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 5.5, 0.05)\n",
     "r2, s2 = 0.050, 500_000 * (1 + gamma)\n",
     "\n",
-    "plot_annuity_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
+    "plot_annuity_matching_T(p1, rhos, r1, r2, tau1, tau2, deltas, gamma)"
    ]
   },
   {
@@ -597,10 +600,11 @@
     "from src.plotting import plot_amortized_matching_T\n",
     "\n",
     "gamma, tau, deltas = 0.02, 0.30, np.arange(0.25, 1.01, 0.01)\n",
+    "tau1, tau2 = tau, tau\n",
     "p1, r1, rhos = 2_000_000, 0.015, np.arange(2, 5.5, 0.05)\n",
     "r2, s2 = 0.050, 500_000 * (1 + gamma)\n",
     "\n",
-    "plot_amortized_matching_T(p1, rhos, r1, r2, tau, deltas, gamma)"
+    "plot_amortized_matching_T(p1, rhos, r1, r2, tau1, tau2, deltas, gamma)"
    ]
   }
  ],
