Improve figure quality

--- a/presentation_annuity_loans.ipynb
+++ b/presentation_annuity_loans.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Author: Velibor Zeli\n",
+    "Author: Ph.D. Velibor Zeli\n",
     "\n",
     "This document is released under a common license, allowing for broad usage and distribution."
    ]
