--- a/presentation_fair_price_model.ipynb
+++ b/presentation_fair_price_model.ipynb
@@ -557,22 +557,15 @@
     "\n",
     "$$ \\Pi_1 = p_1 + \\Delta \\Pi_1, \\qquad (11) $$\n",
     "\n",
-    "where $p_1 = p_1(r_1, p_1, A)$ is the value of the original principal and $\\Delta$ denotes the downpayment size, (i.e., fraction of the house value paid in cash). When interest rates increase, the present value of the loan principal decreases $p_2=p_2(r_2, p_2, A)$, but the original downpayment retains its value and increases in relative terms. Thus, the new housing value is\n",
+    "where $p_1 = p_1(r_1, p_1, A_1)$ is the value of the original principal and $\\Delta$ denotes the size of the downpayment, (i.e., fraction of the house value paid in cash). When economic conditions change, the present value of the loan principal changes $p_2=p_2(r_2, p_2, A_2)$, but the original downpayment retains its value. Thus, the new housing value is\n",
     "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\Pi_2 &= p_2 + \\Delta \\Pi_1 \\notag \\\\\n",
-    "&= p_2 + \\Delta \\frac{p_1}{1 - \\Delta}. \\notag\n",
-    "\\end{align}\n",
-    "$$\n",
+    "$$ \\Pi_2 = p_2 + \\Delta \\Pi_1. \\qquad (12) $$\n",
     "\n",
-    "The relative change of the housing value becomes\n",
+    "Combining (11) and (12) it is possible to derive a relation for the relative change of the housing value\n",
     "\n",
-    "$$\\frac{\\Pi_2 - \\Pi_1}{\\Pi_1} = \\frac{p_2 - p_1}{p_1 + \\Delta \\Pi_1}.$$\n",
+    "$$\\frac{\\Pi_2 - \\Pi_1}{\\Pi_1} = \\frac{p_2 - p_1}{p_1} (1 - \\Delta).$$\n",
     "\n",
-    "Express the above equation in terms of the value of loan principal by solving for $\\Pi_1$ in (11) and making the substitution\n",
-    "\n",
-    "$$\\frac{\\Pi_2 - \\Pi_1}{\\Pi_1} = \\frac{p_2 - p_1}{p_1} (1 - \\Delta).$$"
+    "The above equation states that when there is no downpayment requirement (i.e., $\\Delta = 0$) the relative change of hosuing vlaue is equal to the relative change of the principle. Alternatively, when a house is payed fully in cash $\\Delta = 1$, the buyer is independent of interest rates, relative change of the hosuing value is zero."
    ]
   },
   {
